// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MembersPanel > should display an empty result if no matching members found 1`] = `
"<div class="ml-2">
  <oc-text-input-stub label="Filter members" id="oc-textinput-3" type="text" modelvalue="no-match" clearbuttonenabled="false" clearbuttonaccessiblelabel="" disabled="false" inlinelabel="false" errormessagedebouncedtime="500" fixmessageline="false" readonly="false" requiredmark="false" passwordpolicy="[object Object]" hasborder="true" class="mr-2 mt-4"></oc-text-input-stub>
  <div data-testid="space-members">
    <div>
      <h3 class="font-semibold text-base">No members found</h3>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`MembersPanel > should render all members accordingly to their role assignments 1`] = `
"<div class="ml-2">
  <oc-text-input-stub label="Filter members" id="oc-textinput-1" type="text" modelvalue="" clearbuttonenabled="false" clearbuttonaccessiblelabel="" disabled="false" inlinelabel="false" errormessagedebouncedtime="500" fixmessageline="false" readonly="false" requiredmark="false" passwordpolicy="[object Object]" hasborder="true" class="mr-2 mt-4"></oc-text-input-stub>
  <div data-testid="space-members">
    <!--v-if-->
    <div class="mb-4" data-testid="group-members">
      <h3 class="font-semibold text-base">Members</h3>
      <members-role-section-stub groupmembers="undefined"></members-role-section-stub>
    </div>
  </div>
</div>"
`;
